<resources>
    <string name="app_name">Service Demo</string>

    <string name="title_lifecycle_service">Lifecycle</string>
    <string name="title_working_service">Working</string>
    <string name="title_binding_service">Binding</string>
    <string name="title_intent_service">Intent</string>
    <string name="title_remote_service">Remote</string>
    <string name="title_foreground_service">Foreground</string>
    <string name="title_messenger">Messenger</string>

    <string name="btn_lifecycle_service">Lifecycle</string>
    <string name="btn_start">Start</string>
    <string name="btn_switch">Switch</string>
    <string name="btn_bind">Bind</string>
    <string name="btn_unbind">Unbind</string>
    <string name="btn_stop">Stop</string>
    <string name="btn_connect">Connect</string>
    <string name="btn_disconnect">Disconnect</string>
    <string name="btn_working_service">Working Service</string>
    <string name="btn_bind_service">Bind Service</string>
    <string name="btn_intent_service">Intent Service</string>
    <string name="btn_work">Work</string>
    <string name="btn_remote_service">Remote Service</string>
    <string name="btn_foreground_service">Foreground Service</string>
    <string name="btn_messenger_service">Messenger Service</string>

    <string name="rb_service_created">Created</string>
    <string name="rb_service_started">Started</string>
    <string name="rb_service_bind">Bind</string>
    <string name="rb_service_unbind">Unbind</string>
    <string name="rb_service_destroyed">Destroyed</string>

    <string name="permission_remote_service_label">Remote Service</string>
    <string name="permission_remote_service_description">Start/Stop/Bind to remote service</string>

    <string name="permission_messenger_service_label">Messenger Service</string>
    <string name="permission_messenger_service_description">Start/Stop/Bind to messenger service</string>
</resources>
