<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.views.MainActivity">

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_basic_service"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_lifecycle_service" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_working_service"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_working_service"
        app:layout_constraintTop_toBottomOf="@id/btn_basic_service" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_bind_service"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_bind_service"
        app:layout_constraintTop_toBottomOf="@id/btn_working_service" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_intent_service"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_intent_service"
        app:layout_constraintTop_toBottomOf="@id/btn_bind_service" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_remote_service"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_remote_service"
        app:layout_constraintTop_toBottomOf="@id/btn_intent_service" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_foreground_service"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_foreground_service"
        app:layout_constraintTop_toBottomOf="@id/btn_remote_service" />

</android.support.constraint.ConstraintLayout>
