<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".intent.views.IntentActivity">

    <android.support.v7.widget.LinearLayoutCompat
        android:id="@+id/ll_buttons_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:elevation="1dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:translationZ="1dp">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_work"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_work" />

    </android.support.v7.widget.LinearLayoutCompat>

    <RadioGroup
        android:id="@+id/rg_service_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/ll_buttons_bar">

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/rb_created"
            style="@style/AppTheme.OvalRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:enabled="false"
            android:text="@string/rb_service_created" />

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/rb_destroyed"
            style="@style/AppTheme.OvalRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:checked="true"
            android:enabled="false"
            android:text="@string/rb_service_destroyed" />

    </RadioGroup>

    <ScrollView
        android:id="@+id/sv_job_response"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:paddingBottom="20dp"
        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        android:paddingTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rg_service_status">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tv_job_response"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:text="Job_1 Start" />

    </ScrollView>

</android.support.constraint.ConstraintLayout>
